Fix overflow issue

--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -10,6 +10,8 @@
     box-sizing: border-box;
     width: 100vw;
     min-height: 100vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
   }
   a,
   button,
